// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PointerBox passes the "bg" prop to both <BorderBox> and <Caret> 1`] = `
.c0 {
  background-color: #d73a49;
  border: 1px solid;
  border-color: #e1e4e8;
  border-radius: 3px;
}

<div
  className="c0"
>
  <svg
    height={4}
    style={
      Object {
        "left": "50%",
        "marginLeft": -2,
        "pointerEvents": "none",
        "position": "absolute",
        "top": "100%",
      }
    }
    width={4}
  >
    <g
      transform="translate(2,0)"
    >
      <path
        d="M-2,0L0,2L2,0L-2,0Z"
        fill="red.5"
      />
      <path
        d="M-2,0L0,2L2,0"
        fill="none"
        stroke="gray.2"
        strokeWidth={1}
      />
    </g>
  </svg>
</div>
`;

exports[`PointerBox passes the "borderColor" prop to both <BorderBox> and <Caret> 1`] = `
.c0 {
  border: 1px solid;
  border-color: #d73a49;
  border-radius: 3px;
}

<div
  className="c0"
>
  <svg
    height={4}
    style={
      Object {
        "left": "50%",
        "marginLeft": -2,
        "pointerEvents": "none",
        "position": "absolute",
        "top": "100%",
      }
    }
    width={4}
  >
    <g
      transform="translate(2,0)"
    >
      <path
        d="M-2,0L0,2L2,0L-2,0Z"
        fill="white"
      />
      <path
        d="M-2,0L0,2L2,0"
        fill="none"
        stroke="red.5"
        strokeWidth={1}
      />
    </g>
  </svg>
</div>
`;

exports[`PointerBox renders a <Caret> in <BorderBox> with relative positioning 1`] = `
.c0 {
  border: 1px solid;
  border-color: #e1e4e8;
  border-radius: 3px;
}

<div
  className="c0"
>
  <svg
    height={4}
    style={
      Object {
        "left": "50%",
        "marginLeft": -2,
        "pointerEvents": "none",
        "position": "absolute",
        "top": "100%",
      }
    }
    width={4}
  >
    <g
      transform="translate(2,0)"
    >
      <path
        d="M-2,0L0,2L2,0L-2,0Z"
        fill="white"
      />
      <path
        d="M-2,0L0,2L2,0"
        fill="none"
        stroke="gray.2"
        strokeWidth={1}
      />
    </g>
  </svg>
</div>
`;
